--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header{
 }
 
 .botao{
-  background-color: #131313;
+  background-color: transparent;
   border: #53AFE2 2px solid;
   color: #1B9BE3;
   border-radius: 10px;
