--- a/style.css
+++ b/style.css
@@ -83,6 +83,160 @@ header{
   
 }
 
+/* CURSOS */
+
+.cursos{
+  text-align: center;
+}
+.principal{
+  color: #53AFE2;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+.caixa{
+  background-color: #131313;
+  color: #F5F5F5;
+  margin: 20px;
+  padding: 50px;
+  width: 280px;
+  border-radius: 10%;
+}
+
+/* SKILLS */
+
+.skills{
+  text-align: center;
+  margin-top: 50px;
+
+}
+.principal2{
+  color: #F5F5F5;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+
+.caixa2{
+  background-color: #131313;
+  margin: 20px;
+  padding: 40px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10%;
+}
+
+.caixa2::before{
+  position: absolute;
+  background-color: #0009;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  transform: translateY(100%);
+  transition: transform 0.6s;
+  border-radius: 10%;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.caixa2:hover::before {
+  transform: translate(-20%, -17%);
+  
+}
+.html::before{
+  content: 'HTML';
+}
+.css::before{
+  content: 'CSS';
+}
+.js::before{
+  content: 'JavaScript';
+}
+.mysql::before{
+  content: 'MySQL';
+}
+.figma::before{
+  content: 'Figma ';
+}
+
+/* PROJETOS */
+
+.pj img{
+  width: 500px;
+  height: 300px;
+}
+  
+.box-pj{
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  
+}
+.projetos{
+  text-align: center;
+}
+.pj{
+  margin-right: 30px;
+  border-radius: 10px;
+  border: 4px #53AFE2 solid;
+  position: relative;
+  overflow: hidden;
+  
+}
+.pj::before{
+  position: absolute;
+  background-color: #0009;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  transform: translateY(100%);
+  transition: transform 0.6s;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 20px;
+  content: 'Clique aqui para abrir o Projeto';
+  color: #F5F5F5;
+}
+.pj:hover::before {
+  transform: translate(0, 0%);
+  
+}
+
+/* CONTATOS */
+
+.contatos{
+  box-shadow: inset 0px -40px 40px #000;
+  background-color: #131313;
+  color: #F5F5F5;
+  padding-top: 5px; 
+  text-align: center;
+  margin-top: 6%;
+  
+}
+footer img{
+  width: 50px;
+  
+   
+}
+.contatos ul{
+  display: inline-flex;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  text-align: center;
+  margin-left: 30px;
+  
+
+}
+footer li{
+  margin-right: 40px;
+  list-style: none;
+  margin-bottom: 10%;
+}
 
 
 
